--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -253,7 +253,7 @@ In this section, we test the hypotheses illustrated in the introduction using em
 
 <!-- The hypotheses we present here allow researchers to combine otherwise complicated findings (e.g., fig. \@ref(fig:5-5-sims)) and generalize results to a single, common set of functions. We expect the two hypotheses we present here (figs. \@ref(fig:mu-hyp) and \@ref(fig:s2-hyp)) to be applicable to all motile organisms, once differences in size, metabolic needs, and diet are accounted for. In this subsection, we illustrate how researchers can leverage these hypotheses using their own data to build on previous work rather than listing the results as new findings. Additionally, the analyses can be expanded to the population or species level with the use of Hierarchical Generalized Additive Models (HGAMs) with individual-level intercepts and smooth terms [see models "GS" and "GI" in @pedersen_hierarchical_2019]. Such models would allow one to test whether members of the same population or species respond similarly to $\e(R)$ and $\var(R)$ while also quantifying any deviation from the hypothesized behavior. Individuals and populations that were once thought to have different space-use requirements due to differences in behavior may instead be simply responding to different local conditions along the functions in figs. \@ref(fig:mu-hyp) and \@ref(fig:s2-hyp) [e.g., @singh_migration_2012]. In the following sections, we illustrate how one can apply this framework to empirical data. -->
 
-\noindent Fig. \@ref(fig:tapir-mw) illustrates how a tapir in the Brazilian Cerrado [data from the individual labelled as "Anna" in the dataset from @medici_movement_2022] adapts its spatial needs to changes in $\e(R)$ and $\var(R)$. Panels A and B show the changes in seven-day average mean and variance in NDVI, respectively, experienced by the tapir during the tracking period. The mean and variance in NDVI were estimated using a Generalized Additive Model for Location and Scale [GAMLS, theory: @rigby_generalized_2005; @stasinopoulos_generalized_2007, examples: @bjorndahl_abrupt_2022; @marien_timing_2022; @gushulak_impacts_2024] with a Beta family of distributions (NDVI values ranged from 0.3534 to 0.9475). Panel C shows the changes in the tapir's 7-day home range over time. Note how the tapir uses more space during periods of lower NDVI (e.g., August 2017) and less space during periods with high NDVI (January 2018). Additionally, when resources are scarce and highly unpredictable (August 2018), the tapir uses up to 5 times more space than when resources are abundant and predictable (e.g., January 2018). Finally, panels D and E show the estimated (marginal) effects of $\mu(t)$ and $\sigma^2(t)$ on the tapir's space use. Since $\mu(t)$ and $\sigma^2(t)$ are strongly correlated (panel F) and (spatio)temporally autocorrelated (panels A and B), the effects of $R$ on $H$ should be modeled carefully. To avoid over-fitting the model, we constrained the smooth effects of $\mu(t)$ and $\sigma^2(t)$ using a shape-constrained additive model [@pya_scam_2022] with monotone deceasing and increasing P-splines for $\mu(t)$ and $\sigma^2(t)$, respectively. Additional information is provided in appendix C. Overall, the results presented in fig. \@ref(fig:tapir-mw) support our hypotheses, as the taprir's 7-day home range decreases nonlinearly with $\mu(t)$ and increases nonlinearly with $\sigma^2(t)$. However, due to the strong nonlinear correlation between the two predictors, the marginal effects do not follow the data closely, particularly in the case of $\mu(t)$. We provide comments about these results in the related section in the discussion below.
+\noindent Fig. \@ref(fig:tapir-mw) illustrates how a tapir in the Brazilian Cerrado [data from the individual labelled as "Anna" in the dataset from @medici_movement_2022] adapts its spatial needs to changes in $\e(R)$ and $\var(R)$. Panels A and B show the changes in seven-day average mean and variance in NDVI, respectively, experienced by the tapir during the tracking period. The mean and variance in NDVI were estimated using a Generalized Additive Model for Location and Scale [GAMLS, theory: @rigby_generalized_2005; @stasinopoulos_generalized_2007; examples: @bjorndahl_abrupt_2022; @marien_timing_2022; @gushulak_impacts_2024] with a Beta family of distributions (NDVI values ranged from 0.3534 to 0.9475). Panel C shows the changes in the tapir's 7-day home range over time. Note how the tapir uses more space during periods of lower NDVI (e.g., August 2017) and less space during periods with high NDVI (January 2018). Additionally, when resources are scarce and highly unpredictable (August 2018), the tapir uses up to 5 times more space than when resources are abundant and predictable (e.g., January 2018). Finally, panels D and E show the estimated (marginal) effects of $\mu(t)$ and $\sigma^2(t)$ on the tapir's space use. Since $\mu(t)$ and $\sigma^2(t)$ are strongly correlated (panel F) and (spatio)temporally autocorrelated (panels A and B), the effects of $R$ on $H$ should be modeled carefully. To avoid over-fitting the model, we constrained the smooth effects of $\mu(t)$ and $\sigma^2(t)$ using low number of knots ($\tt{k = 3}$). Additional information is provided in appendix C. Overall, the results presented in fig. \@ref(fig:tapir-mw) support our hypotheses, as the taprir's 7-day home range decreases nonlinearly with $\mu(t)$ and increases nonlinearly with $\sigma^2(t)$. However, due to the strong nonlinear correlation between the two predictors, the marginal effects do not follow the data closely, particularly in the case of $\mu(t)$. We provide comments about these results in the related section in the discussion below.
 
 ```{r tapir-mw, fig.cap="Seven-day home-range size of a lowland tapir (\\emph{Tapirus terrestris}) in response to changes in mean and variance in resources. (A) Trends in resource abundance over time, $\\mu(t)$, esimated as the average mean NDVI at the locations visited by the tapir during a seven-day period. (B) Varince in resources over time, $\\sigma^2(t)$, esimated as the average variance in NDVI at the locations visited by the tapir during a seven-day period. (C) Estimated seven-day home range based on the 95\\% utilization quantiles. (D, E) Estimated marginal effects of $\\mu(t)$ and $\\sigma^2(t)$ on home-range size. The model accounted for the marginal effects of $\\mu(t)$ and $\\sigma^2(t)$ and their interaction on mean space-use requirements and the variance around them. (F) The effect of $\\mu(t)$ does not follow the data closely because $\\e(R)$ and $\\var(R)$ are highly correlated. Consequently, while estimating the effects of $\\e(R)$ and $\\var(R)$ via separate models would allow result in a closer fit, the estimated effects would be inappropriate because they do not disentangle the effects of $\\e(R)$ and $\\var(R)$. See Appendix C for additional information. The tapir movement data corresponds to the individual named ``Anna\" from the Cerrado sample of Medici $et~al.$ (2022).", out.width='100%'}
 knitr::include_graphics('../figures/tapir-example.png')
